--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>
                 Skills:<br>
                 - HTML, CSS, Git (Front-End developer);<br>
+                - Django and Flask;<br>
                 - Python (panda, numpy, matplot lib, sql, and so on);<br>
                 - Power BI (Dashboards, Dax, fact and dimension tables, storytelling);<br>
                 - Excel (power query, power pivot, macros VBA);<br>
