--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed= new Typed(".input",{ 
-            strings:["data analyst","developer","data viz","roller skater"],
+            strings:["business intelligence","developer","data viz","roller skater"],
             typedspeed:10, 
             backspeed:10,
             loop: true,
