Incluindo javascript em skills

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>I'm <br> <span class="input"></span></h1>
             <p>
                 Skills:<br>
-                - HTML, CSS, Git (Front-End developer);<br>
+                - HTML, CSS, JavaScript, Github;<br>
                 - Django and Flask;<br>
                 - Python (panda, numpy, matplot lib, sql, and so on);<br>
                 - Power BI (Dashboards, Dax, fact and dimension tables, storytelling);<br>
@@ -50,7 +50,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed= new Typed(".input",{ 
-            strings:["data analytics","developer","data viz","roller skater"],
+            strings:["data analytics","dev.fullstack","data viz","roller skater"],
             typedspeed:10, 
             backspeed:10,
             loop: true,
