--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <h1>I'm <br> <span class="input"></span></h1>
             <p>
                 Skills:<br>
-                - HTML, CSS, JavaScript, Github;<br>
-                - Django and Flask;<br>
+                - HTML, CSS, Github;<br>
+                - Django;<br>
                 - Python (panda, numpy, matplot lib, sql, and so on);<br>
                 - Power BI (Dashboards, Dax, fact and dimension tables, storytelling);<br>
                 - Excel (power query, power pivot, macros VBA);<br>
-                - SQL (PostgreSql, SQL Server, and so on);<br>
-                - IBM Data Manager Cognos( ETL, Jobs, Builds, Audit);<br>
-                - CRM (Salesforce Admin);<br></p>
+                - SQL Server;<br>
+                - ETL IBM DataStage & Data Manager Cognos;<br></p>
+            
             <button type="button"> My Github<a href="https://github.com/yumedakuzaku"></button>
 
         </div>
